--- a/BookShop/.classpath
+++ b/BookShop/.classpath
@@ -6,11 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/LG/Downloads/mysql-connector-java-8.0.23.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/LG/Downloads/rs2xml.jar"/>
+	<classpathentry kind="lib" path="C:/Users/LG/Downloads/mysql-connector-java-8.0.23.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
